--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
+    "handlebars": "^4.0.11",
     "http-errors": "~1.6.2",
     "mongodb": "^3.0.10",
     "morgan": "~1.9.0",
